quick fix to footer menu on mobile to make height smaller

--- a/styles/mobile/_footer.scss
+++ b/styles/mobile/_footer.scss
@@ -16,7 +16,7 @@
   padding: 35px 0 10px;
 
     &.open {
-      top: -630px;
+      top: -600px;
     }
 }
 
